[project]
name = "pyPixel16"
authors = [
	{name = "Gordon A. MacDonald", email = "gmacdonald@apo.nmsu.edu"},
]
version = "0.0.1"
description = "Performs bit- and bytewise operations on 16-bit unsigned integers."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    'importlib-metadata; python_version<"3.10"',
]
